parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_declaration
Rule 1     program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque
Rule 2     declare_vars -> VAR vars
Rule 3     declare_vars -> empty
Rule 4     vars -> var_id dimensions more_vars SEMICOLON vars
Rule 5     vars -> empty
Rule 6     var_id -> tipo ID
Rule 7     more_vars -> more_var_id dimensions more_vars
Rule 8     more_vars -> empty
Rule 9     more_var_id -> COMMA ID
Rule 10    dimensions -> OPENBRAC CTEI CLOSEBRAC
Rule 11    dimensions -> OPENBRAC CTEI CLOSEBRAC OPENBRAC CTEI CLOSEBRAC
Rule 12    dimensions -> empty
Rule 13    declare_func_rec -> declare_func_rec declare_func
Rule 14    declare_func_rec -> empty
Rule 15    declare_func -> FUNCION func_id OPENPAR declare_func_params CLOSEPAR bloque
Rule 16    func_id -> tipo ID
Rule 17    func_id -> VOID ID
Rule 18    declare_func_params -> get_func_params more_params
Rule 19    declare_func_params -> empty
Rule 20    get_func_params -> tipo ID
Rule 21    more_params -> more_var_id more_params
Rule 22    more_params -> empty
Rule 23    more_var_id -> COMMA tipo ID
Rule 24    tipo -> INT
Rule 25    tipo -> FLOAT
Rule 26    tipo -> CHAR
Rule 27    tipo -> BOOL
Rule 28    bloque -> LCURLYB declare_vars estatutos_rec RCURLYB
Rule 29    estatutos_rec -> estatuto estatutos_rec
Rule 30    estatutos_rec -> empty
Rule 31    estatuto -> asignacion
Rule 32    estatuto -> condicion
Rule 33    estatuto -> func_void
Rule 34    estatuto -> retorno
Rule 35    estatuto -> escribe
Rule 36    estatuto -> lee
Rule 37    estatuto -> desde
Rule 38    estatuto -> mientras_estatuto
Rule 39    asignacion -> id ASSIGN megaexp SEMICOLON
Rule 40    condicion -> SI OPENPAR megaexp CLOSEPAR entonces bloque_entonces
Rule 41    entonces -> ENTONCES
Rule 42    bloque_entonces -> bloque bloque_sino
Rule 43    bloque_sino -> sino bloque
Rule 44    bloque_sino -> empty
Rule 45    sino -> SINO
Rule 46    func_void -> func_call_id OPENPAR func_call_params CLOSEPAR SEMICOLON
Rule 47    func_call_id -> ID
Rule 48    func_call_params -> megaexp
Rule 49    func_call_params -> func_call_params COMMA func_call_params
Rule 50    func_call_params -> empty
Rule 51    escribe -> QUACKOUT OPENPAR print_options CLOSEPAR SEMICOLON
Rule 52    print_options -> CTES more_print
Rule 53    print_options -> megaexp more_print
Rule 54    more_print -> COMMA CTES
Rule 55    more_print -> COMMA megaexp
Rule 56    more_print -> empty
Rule 57    lee -> QUACKIN OPENPAR ID read_more CLOSEPAR SEMICOLON
Rule 58    read_more -> COMMA ID read_more
Rule 59    read_more -> empty
Rule 60    retorno -> RETORNO OPENPAR megaexp CLOSEPAR SEMICOLON
Rule 61    desde -> DESDE forId ASSIGN exp hasta exp hacer bloque
Rule 62    forId -> ID
Rule 63    hasta -> HASTA
Rule 64    hacer -> HACER
Rule 65    mientras_estatuto -> mientras OPENPAR megaexp CLOSEPAR haz bloque
Rule 66    mientras -> MIENTRAS
Rule 67    haz -> HAZ
Rule 68    id -> ID
Rule 69    id -> ID OPENBRAC exp CLOSEBRAC
Rule 70    id -> ID OPENBRAC exp CLOSEBRAC OPENBRAC exp CLOSEBRAC
Rule 71    boolean_op -> OR
Rule 72    boolean_op -> AND
Rule 73    logical_op -> GT
Rule 74    logical_op -> GTE
Rule 75    logical_op -> LT
Rule 76    logical_op -> LTE
Rule 77    logical_op -> NEQ
Rule 78    logical_op -> EQ
Rule 79    sums -> MINUS
Rule 80    sums -> PLUS
Rule 81    multdiv -> TIMES
Rule 82    multdiv -> DIVIDE
Rule 83    megaexp -> superexp
Rule 84    megaexp -> megaexp boolean_op superexp
Rule 85    superexp -> exp
Rule 86    superexp -> superexp logical_op exp
Rule 87    exp -> termino
Rule 88    exp -> exp sums termino
Rule 89    termino -> factor
Rule 90    termino -> termino multdiv factor
Rule 91    factor -> vcte
Rule 92    factor -> openpar megaexp closepar
Rule 93    openpar -> OPENPAR
Rule 94    closepar -> CLOSEPAR
Rule 95    vcte -> id
Rule 96    vcte -> CTEI
Rule 97    vcte -> CTEF
Rule 98    vcte -> TRUE
Rule 99    vcte -> FALSE
Rule 100   vcte -> CTEC
Rule 101   empty -> <empty>

Terminals, with rules where they appear

AND                  : 72
ASSIGN               : 39 61
BOOL                 : 27
CHAR                 : 26
CLOSEBRAC            : 10 11 11 69 70 70
CLOSEPAR             : 1 15 40 46 51 57 60 65 94
COMMA                : 9 23 49 54 55 58
CTEC                 : 100
CTEF                 : 97
CTEI                 : 10 11 11 96
CTES                 : 52 54
DESDE                : 61
DIVIDE               : 82
ENTONCES             : 41
EQ                   : 78
FALSE                : 99
FLOAT                : 25
FUNCION              : 15
GT                   : 73
GTE                  : 74
HACER                : 64
HASTA                : 63
HAZ                  : 67
ID                   : 1 6 9 16 17 20 23 47 57 58 62 68 69 70
INT                  : 24
LCURLYB              : 28
LT                   : 75
LTE                  : 76
MIENTRAS             : 66
MINUS                : 79
NEQ                  : 77
OPENBRAC             : 10 11 11 69 70 70
OPENPAR              : 1 15 40 46 51 57 60 65 93
OR                   : 71
PLUS                 : 80
PRINCIPAL            : 1
PROGRAMA             : 1
QUACKIN              : 57
QUACKOUT             : 51
RCURLYB              : 28
RETORNO              : 60
SEMICOLON            : 1 4 39 46 51 57 60
SI                   : 40
SINO                 : 45
TIMES                : 81
TRUE                 : 98
VAR                  : 2
VOID                 : 17
error                : 

Nonterminals, with rules where they appear

asignacion           : 31
bloque               : 1 15 42 43 61 65
bloque_entonces      : 40
bloque_sino          : 42
boolean_op           : 84
closepar             : 92
condicion            : 32
declare_func         : 13
declare_func_params  : 15
declare_func_rec     : 1 13
declare_vars         : 1 28
desde                : 37
dimensions           : 4 7
empty                : 3 5 8 12 14 19 22 30 44 50 56 59
entonces             : 40
escribe              : 35
estatuto             : 29
estatutos_rec        : 28 29
exp                  : 61 61 69 70 70 85 86 88
factor               : 89 90
forId                : 61
func_call_id         : 46
func_call_params     : 46 49 49
func_id              : 15
func_void            : 33
get_func_params      : 18
hacer                : 61
hasta                : 61
haz                  : 65
id                   : 39 95
lee                  : 36
logical_op           : 86
megaexp              : 39 40 48 53 55 60 65 84 92
mientras             : 65
mientras_estatuto    : 38
more_params          : 18 21
more_print           : 52 53
more_var_id          : 7 21
more_vars            : 4 7
multdiv              : 90
openpar              : 92
print_options        : 51
program_declaration  : 0
read_more            : 57 58
retorno              : 34
sino                 : 43
sums                 : 88
superexp             : 83 84 86
termino              : 87 88 90
tipo                 : 6 16 20 23
var_id               : 4
vars                 : 2 4
vcte                 : 91

Parsing method: LALR

state 0

    (0) S' -> . program_declaration
    (1) program_declaration -> . PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque

    PROGRAMA        shift and go to state 2

    program_declaration            shift and go to state 1

state 1

    (0) S' -> program_declaration .



state 2

    (1) program_declaration -> PROGRAMA . ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque

    ID              shift and go to state 3


state 3

    (1) program_declaration -> PROGRAMA ID . SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque

    SEMICOLON       shift and go to state 4


state 4

    (1) program_declaration -> PROGRAMA ID SEMICOLON . declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque
    (2) declare_vars -> . VAR vars
    (3) declare_vars -> . empty
    (101) empty -> .

    VAR             shift and go to state 6
    PRINCIPAL       reduce using rule 101 (empty -> .)
    FUNCION         reduce using rule 101 (empty -> .)

    declare_vars                   shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars . declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque
    (13) declare_func_rec -> . declare_func_rec declare_func
    (14) declare_func_rec -> . empty
    (101) empty -> .

    PRINCIPAL       reduce using rule 101 (empty -> .)
    FUNCION         reduce using rule 101 (empty -> .)

    declare_func_rec               shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) declare_vars -> VAR . vars
    (4) vars -> . var_id dimensions more_vars SEMICOLON vars
    (5) vars -> . empty
    (6) var_id -> . tipo ID
    (101) empty -> .
    (24) tipo -> . INT
    (25) tipo -> . FLOAT
    (26) tipo -> . CHAR
    (27) tipo -> . BOOL

    PRINCIPAL       reduce using rule 101 (empty -> .)
    FUNCION         reduce using rule 101 (empty -> .)
    SI              reduce using rule 101 (empty -> .)
    RETORNO         reduce using rule 101 (empty -> .)
    QUACKOUT        reduce using rule 101 (empty -> .)
    QUACKIN         reduce using rule 101 (empty -> .)
    DESDE           reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    MIENTRAS        reduce using rule 101 (empty -> .)
    RCURLYB         reduce using rule 101 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    vars                           shift and go to state 10
    var_id                         shift and go to state 11
    empty                          shift and go to state 12
    tipo                           shift and go to state 13

state 7

    (3) declare_vars -> empty .

    PRINCIPAL       reduce using rule 3 (declare_vars -> empty .)
    FUNCION         reduce using rule 3 (declare_vars -> empty .)
    SI              reduce using rule 3 (declare_vars -> empty .)
    RETORNO         reduce using rule 3 (declare_vars -> empty .)
    QUACKOUT        reduce using rule 3 (declare_vars -> empty .)
    QUACKIN         reduce using rule 3 (declare_vars -> empty .)
    DESDE           reduce using rule 3 (declare_vars -> empty .)
    ID              reduce using rule 3 (declare_vars -> empty .)
    MIENTRAS        reduce using rule 3 (declare_vars -> empty .)
    RCURLYB         reduce using rule 3 (declare_vars -> empty .)


state 8

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec . PRINCIPAL OPENPAR CLOSEPAR bloque
    (13) declare_func_rec -> declare_func_rec . declare_func
    (15) declare_func -> . FUNCION func_id OPENPAR declare_func_params CLOSEPAR bloque

    PRINCIPAL       shift and go to state 18
    FUNCION         shift and go to state 20

    declare_func                   shift and go to state 19

state 9

    (14) declare_func_rec -> empty .

    PRINCIPAL       reduce using rule 14 (declare_func_rec -> empty .)
    FUNCION         reduce using rule 14 (declare_func_rec -> empty .)


state 10

    (2) declare_vars -> VAR vars .

    PRINCIPAL       reduce using rule 2 (declare_vars -> VAR vars .)
    FUNCION         reduce using rule 2 (declare_vars -> VAR vars .)
    SI              reduce using rule 2 (declare_vars -> VAR vars .)
    RETORNO         reduce using rule 2 (declare_vars -> VAR vars .)
    QUACKOUT        reduce using rule 2 (declare_vars -> VAR vars .)
    QUACKIN         reduce using rule 2 (declare_vars -> VAR vars .)
    DESDE           reduce using rule 2 (declare_vars -> VAR vars .)
    ID              reduce using rule 2 (declare_vars -> VAR vars .)
    MIENTRAS        reduce using rule 2 (declare_vars -> VAR vars .)
    RCURLYB         reduce using rule 2 (declare_vars -> VAR vars .)


state 11

    (4) vars -> var_id . dimensions more_vars SEMICOLON vars
    (10) dimensions -> . OPENBRAC CTEI CLOSEBRAC
    (11) dimensions -> . OPENBRAC CTEI CLOSEBRAC OPENBRAC CTEI CLOSEBRAC
    (12) dimensions -> . empty
    (101) empty -> .

    OPENBRAC        shift and go to state 22
    COMMA           reduce using rule 101 (empty -> .)
    SEMICOLON       reduce using rule 101 (empty -> .)

    dimensions                     shift and go to state 21
    empty                          shift and go to state 23

state 12

    (5) vars -> empty .

    PRINCIPAL       reduce using rule 5 (vars -> empty .)
    FUNCION         reduce using rule 5 (vars -> empty .)
    SI              reduce using rule 5 (vars -> empty .)
    RETORNO         reduce using rule 5 (vars -> empty .)
    QUACKOUT        reduce using rule 5 (vars -> empty .)
    QUACKIN         reduce using rule 5 (vars -> empty .)
    DESDE           reduce using rule 5 (vars -> empty .)
    ID              reduce using rule 5 (vars -> empty .)
    MIENTRAS        reduce using rule 5 (vars -> empty .)
    RCURLYB         reduce using rule 5 (vars -> empty .)


state 13

    (6) var_id -> tipo . ID

    ID              shift and go to state 24


state 14

    (24) tipo -> INT .

    ID              reduce using rule 24 (tipo -> INT .)


state 15

    (25) tipo -> FLOAT .

    ID              reduce using rule 25 (tipo -> FLOAT .)


state 16

    (26) tipo -> CHAR .

    ID              reduce using rule 26 (tipo -> CHAR .)


state 17

    (27) tipo -> BOOL .

    ID              reduce using rule 27 (tipo -> BOOL .)


state 18

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL . OPENPAR CLOSEPAR bloque

    OPENPAR         shift and go to state 25


state 19

    (13) declare_func_rec -> declare_func_rec declare_func .

    PRINCIPAL       reduce using rule 13 (declare_func_rec -> declare_func_rec declare_func .)
    FUNCION         reduce using rule 13 (declare_func_rec -> declare_func_rec declare_func .)


state 20

    (15) declare_func -> FUNCION . func_id OPENPAR declare_func_params CLOSEPAR bloque
    (16) func_id -> . tipo ID
    (17) func_id -> . VOID ID
    (24) tipo -> . INT
    (25) tipo -> . FLOAT
    (26) tipo -> . CHAR
    (27) tipo -> . BOOL

    VOID            shift and go to state 28
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    func_id                        shift and go to state 26
    tipo                           shift and go to state 27

state 21

    (4) vars -> var_id dimensions . more_vars SEMICOLON vars
    (7) more_vars -> . more_var_id dimensions more_vars
    (8) more_vars -> . empty
    (9) more_var_id -> . COMMA ID
    (23) more_var_id -> . COMMA tipo ID
    (101) empty -> .

    COMMA           shift and go to state 32
    SEMICOLON       reduce using rule 101 (empty -> .)

    more_vars                      shift and go to state 29
    more_var_id                    shift and go to state 30
    empty                          shift and go to state 31

state 22

    (10) dimensions -> OPENBRAC . CTEI CLOSEBRAC
    (11) dimensions -> OPENBRAC . CTEI CLOSEBRAC OPENBRAC CTEI CLOSEBRAC

    CTEI            shift and go to state 33


state 23

    (12) dimensions -> empty .

    COMMA           reduce using rule 12 (dimensions -> empty .)
    SEMICOLON       reduce using rule 12 (dimensions -> empty .)


state 24

    (6) var_id -> tipo ID .

    OPENBRAC        reduce using rule 6 (var_id -> tipo ID .)
    COMMA           reduce using rule 6 (var_id -> tipo ID .)
    SEMICOLON       reduce using rule 6 (var_id -> tipo ID .)


state 25

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR . CLOSEPAR bloque

    CLOSEPAR        shift and go to state 34


state 26

    (15) declare_func -> FUNCION func_id . OPENPAR declare_func_params CLOSEPAR bloque

    OPENPAR         shift and go to state 35


state 27

    (16) func_id -> tipo . ID

    ID              shift and go to state 36


state 28

    (17) func_id -> VOID . ID

    ID              shift and go to state 37


state 29

    (4) vars -> var_id dimensions more_vars . SEMICOLON vars

    SEMICOLON       shift and go to state 38


state 30

    (7) more_vars -> more_var_id . dimensions more_vars
    (10) dimensions -> . OPENBRAC CTEI CLOSEBRAC
    (11) dimensions -> . OPENBRAC CTEI CLOSEBRAC OPENBRAC CTEI CLOSEBRAC
    (12) dimensions -> . empty
    (101) empty -> .

    OPENBRAC        shift and go to state 22
    COMMA           reduce using rule 101 (empty -> .)
    SEMICOLON       reduce using rule 101 (empty -> .)

    dimensions                     shift and go to state 39
    empty                          shift and go to state 23

state 31

    (8) more_vars -> empty .

    SEMICOLON       reduce using rule 8 (more_vars -> empty .)


state 32

    (9) more_var_id -> COMMA . ID
    (23) more_var_id -> COMMA . tipo ID
    (24) tipo -> . INT
    (25) tipo -> . FLOAT
    (26) tipo -> . CHAR
    (27) tipo -> . BOOL

    ID              shift and go to state 40
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    tipo                           shift and go to state 41

state 33

    (10) dimensions -> OPENBRAC CTEI . CLOSEBRAC
    (11) dimensions -> OPENBRAC CTEI . CLOSEBRAC OPENBRAC CTEI CLOSEBRAC

    CLOSEBRAC       shift and go to state 42


state 34

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR . bloque
    (28) bloque -> . LCURLYB declare_vars estatutos_rec RCURLYB

    LCURLYB         shift and go to state 44

    bloque                         shift and go to state 43

state 35

    (15) declare_func -> FUNCION func_id OPENPAR . declare_func_params CLOSEPAR bloque
    (18) declare_func_params -> . get_func_params more_params
    (19) declare_func_params -> . empty
    (20) get_func_params -> . tipo ID
    (101) empty -> .
    (24) tipo -> . INT
    (25) tipo -> . FLOAT
    (26) tipo -> . CHAR
    (27) tipo -> . BOOL

    CLOSEPAR        reduce using rule 101 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    declare_func_params            shift and go to state 45
    get_func_params                shift and go to state 46
    empty                          shift and go to state 47
    tipo                           shift and go to state 48

state 36

    (16) func_id -> tipo ID .

    OPENPAR         reduce using rule 16 (func_id -> tipo ID .)


state 37

    (17) func_id -> VOID ID .

    OPENPAR         reduce using rule 17 (func_id -> VOID ID .)


state 38

    (4) vars -> var_id dimensions more_vars SEMICOLON . vars
    (4) vars -> . var_id dimensions more_vars SEMICOLON vars
    (5) vars -> . empty
    (6) var_id -> . tipo ID
    (101) empty -> .
    (24) tipo -> . INT
    (25) tipo -> . FLOAT
    (26) tipo -> . CHAR
    (27) tipo -> . BOOL

    PRINCIPAL       reduce using rule 101 (empty -> .)
    FUNCION         reduce using rule 101 (empty -> .)
    SI              reduce using rule 101 (empty -> .)
    RETORNO         reduce using rule 101 (empty -> .)
    QUACKOUT        reduce using rule 101 (empty -> .)
    QUACKIN         reduce using rule 101 (empty -> .)
    DESDE           reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    MIENTRAS        reduce using rule 101 (empty -> .)
    RCURLYB         reduce using rule 101 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    var_id                         shift and go to state 11
    vars                           shift and go to state 49
    empty                          shift and go to state 12
    tipo                           shift and go to state 13

state 39

    (7) more_vars -> more_var_id dimensions . more_vars
    (7) more_vars -> . more_var_id dimensions more_vars
    (8) more_vars -> . empty
    (9) more_var_id -> . COMMA ID
    (23) more_var_id -> . COMMA tipo ID
    (101) empty -> .

    COMMA           shift and go to state 32
    SEMICOLON       reduce using rule 101 (empty -> .)

    more_var_id                    shift and go to state 30
    more_vars                      shift and go to state 50
    empty                          shift and go to state 31

state 40

    (9) more_var_id -> COMMA ID .

    OPENBRAC        reduce using rule 9 (more_var_id -> COMMA ID .)
    COMMA           reduce using rule 9 (more_var_id -> COMMA ID .)
    SEMICOLON       reduce using rule 9 (more_var_id -> COMMA ID .)
    CLOSEPAR        reduce using rule 9 (more_var_id -> COMMA ID .)


state 41

    (23) more_var_id -> COMMA tipo . ID

    ID              shift and go to state 51


state 42

    (10) dimensions -> OPENBRAC CTEI CLOSEBRAC .
    (11) dimensions -> OPENBRAC CTEI CLOSEBRAC . OPENBRAC CTEI CLOSEBRAC

    COMMA           reduce using rule 10 (dimensions -> OPENBRAC CTEI CLOSEBRAC .)
    SEMICOLON       reduce using rule 10 (dimensions -> OPENBRAC CTEI CLOSEBRAC .)
    OPENBRAC        shift and go to state 52


state 43

    (1) program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque .

    $end            reduce using rule 1 (program_declaration -> PROGRAMA ID SEMICOLON declare_vars declare_func_rec PRINCIPAL OPENPAR CLOSEPAR bloque .)


state 44

    (28) bloque -> LCURLYB . declare_vars estatutos_rec RCURLYB
    (2) declare_vars -> . VAR vars
    (3) declare_vars -> . empty
    (101) empty -> .

    VAR             shift and go to state 6
    SI              reduce using rule 101 (empty -> .)
    RETORNO         reduce using rule 101 (empty -> .)
    QUACKOUT        reduce using rule 101 (empty -> .)
    QUACKIN         reduce using rule 101 (empty -> .)
    DESDE           reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    MIENTRAS        reduce using rule 101 (empty -> .)
    RCURLYB         reduce using rule 101 (empty -> .)

    declare_vars                   shift and go to state 53
    empty                          shift and go to state 7

state 45

    (15) declare_func -> FUNCION func_id OPENPAR declare_func_params . CLOSEPAR bloque

    CLOSEPAR        shift and go to state 54


state 46

    (18) declare_func_params -> get_func_params . more_params
    (21) more_params -> . more_var_id more_params
    (22) more_params -> . empty
    (9) more_var_id -> . COMMA ID
    (23) more_var_id -> . COMMA tipo ID
    (101) empty -> .

    COMMA           shift and go to state 32
    CLOSEPAR        reduce using rule 101 (empty -> .)

    more_params                    shift and go to state 55
    more_var_id                    shift and go to state 56
    empty                          shift and go to state 57

state 47

    (19) declare_func_params -> empty .

    CLOSEPAR        reduce using rule 19 (declare_func_params -> empty .)


state 48

    (20) get_func_params -> tipo . ID

    ID              shift and go to state 58


state 49

    (4) vars -> var_id dimensions more_vars SEMICOLON vars .

    PRINCIPAL       reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    FUNCION         reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    SI              reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    RETORNO         reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    QUACKOUT        reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    QUACKIN         reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    DESDE           reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    ID              reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    MIENTRAS        reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)
    RCURLYB         reduce using rule 4 (vars -> var_id dimensions more_vars SEMICOLON vars .)


state 50

    (7) more_vars -> more_var_id dimensions more_vars .

    SEMICOLON       reduce using rule 7 (more_vars -> more_var_id dimensions more_vars .)


state 51

    (23) more_var_id -> COMMA tipo ID .

    OPENBRAC        reduce using rule 23 (more_var_id -> COMMA tipo ID .)
    COMMA           reduce using rule 23 (more_var_id -> COMMA tipo ID .)
    SEMICOLON       reduce using rule 23 (more_var_id -> COMMA tipo ID .)
    CLOSEPAR        reduce using rule 23 (more_var_id -> COMMA tipo ID .)


state 52

    (11) dimensions -> OPENBRAC CTEI CLOSEBRAC OPENBRAC . CTEI CLOSEBRAC

    CTEI            shift and go to state 59


state 53

    (28) bloque -> LCURLYB declare_vars . estatutos_rec RCURLYB
    (29) estatutos_rec -> . estatuto estatutos_rec
    (30) estatutos_rec -> . empty
    (31) estatuto -> . asignacion
    (32) estatuto -> . condicion
    (33) estatuto -> . func_void
    (34) estatuto -> . retorno
    (35) estatuto -> . escribe
    (36) estatuto -> . lee
    (37) estatuto -> . desde
    (38) estatuto -> . mientras_estatuto
    (101) empty -> .
    (39) asignacion -> . id ASSIGN megaexp SEMICOLON
    (40) condicion -> . SI OPENPAR megaexp CLOSEPAR entonces bloque_entonces
    (46) func_void -> . func_call_id OPENPAR func_call_params CLOSEPAR SEMICOLON
    (60) retorno -> . RETORNO OPENPAR megaexp CLOSEPAR SEMICOLON
    (51) escribe -> . QUACKOUT OPENPAR print_options CLOSEPAR SEMICOLON
    (57) lee -> . QUACKIN OPENPAR ID read_more CLOSEPAR SEMICOLON
    (61) desde -> . DESDE forId ASSIGN exp hasta exp hacer bloque
    (65) mientras_estatuto -> . mientras OPENPAR megaexp CLOSEPAR haz bloque
    (68) id -> . ID
    (69) id -> . ID OPENBRAC exp CLOSEBRAC
    (70) id -> . ID OPENBRAC exp CLOSEBRAC OPENBRAC exp CLOSEBRAC
    (47) func_call_id -> . ID
    (66) mientras -> . MIENTRAS

    RCURLYB         reduce using rule 101 (empty -> .)
    SI              shift and go to state 72
    RETORNO         shift and go to state 74
    QUACKOUT        shift and go to state 75
    QUACKIN         shift and go to state 76
    DESDE           shift and go to state 78
    ID              shift and go to state 77
    MIENTRAS        shift and go to state 80

    estatutos_rec                  shift and go to state 60
    estatuto                       shift and go to state 61
    empty                          shift and go to state 62
    asignacion                     shift and go to state 63
    condicion                      shift and go to state 64
    func_void                      shift and go to state 65
    retorno                        shift and go to state 66
    escribe                        shift and go to state 67
    lee                            shift and go to state 68
    desde                          shift and go to state 69
    mientras_estatuto              shift and go to state 70
    id                             shift and go to state 71
    func_call_id                   shift and go to state 73
    mientras                       shift and go to state 79

state 54

    (15) declare_func -> FUNCION func_id OPENPAR declare_func_params CLOSEPAR . bloque
    (28) bloque -> . LCURLYB declare_vars estatutos_rec RCURLYB

    LCURLYB         shift and go to state 44

    bloque                         shift and go to state 81

state 55

    (18) declare_func_params -> get_func_params more_params .

    CLOSEPAR        reduce using rule 18 (declare_func_params -> get_func_params more_params .)


state 56

    (21) more_params -> more_var_id . more_params
    (21) more_params -> . more_var_id more_params
    (22) more_params -> . empty
    (9) more_var_id -> . COMMA ID
    (23) more_var_id -> . COMMA tipo ID
    (101) empty -> .

    COMMA           shift and go to state 32
    CLOSEPAR        reduce using rule 101 (empty -> .)

    more_var_id                    shift and go to state 56
    more_params                    shift and go to state 82
    empty                          shift and go to state 57

state 57

    (22) more_params -> empty .

    CLOSEPAR        reduce using rule 22 (more_params -> empty .)


state 58

    (20) get_func_params -> tipo ID .

    COMMA           reduce using rule 20 (get_func_params -> tipo ID .)
    CLOSEPAR        reduce using rule 20 (get_func_params -> tipo ID .)


state 59

    (11) dimensions -> OPENBRAC CTEI CLOSEBRAC OPENBRAC CTEI . CLOSEBRAC

    CLOSEBRAC       shift and go to state 83


state 60

    (28) bloque -> LCURLYB declare_vars estatutos_rec . RCURLYB

    RCURLYB         shift and go to state 84


state 61

    (29) estatutos_rec -> estatuto . estatutos_rec
    (29) estatutos_rec -> . estatuto estatutos_rec
    (30) estatutos_rec -> . empty
    (31) estatuto -> . asignacion
    (32) estatuto -> . condicion
    (33) estatuto -> . func_void
    (34) estatuto -> . retorno
    (35) estatuto -> . escribe
    (36) estatuto -> . lee
    (37) estatuto -> . desde
    (38) estatuto -> . mientras_estatuto
    (101) empty -> .
    (39) asignacion -> . id ASSIGN megaexp SEMICOLON
    (40) condicion -> . SI OPENPAR megaexp CLOSEPAR entonces bloque_entonces
    (46) func_void -> . func_call_id OPENPAR func_call_params CLOSEPAR SEMICOLON
    (60) retorno -> . RETORNO OPENPAR megaexp CLOSEPAR SEMICOLON
    (51) escribe -> . QUACKOUT OPENPAR print_options CLOSEPAR SEMICOLON
    (57) lee -> . QUACKIN OPENPAR ID read_more CLOSEPAR SEMICOLON
    (61) desde -> . DESDE forId ASSIGN exp hasta exp hacer bloque
    (65) mientras_estatuto -> . mientras OPENPAR megaexp CLOSEPAR haz bloque
    (68) id -> . ID
    (69) id -> . ID OPENBRAC exp CLOSEBRAC
    (70) id -> . ID OPENBRAC exp CLOSEBRAC OPENBRAC exp CLOSEBRAC
    (47) func_call_id -> . ID
    (66) mientras -> . MIENTRAS

    RCURLYB         reduce using rule 101 (empty -> .)
    SI              shift and go to state 72
    RETORNO         shift and go to state 74
    QUACKOUT        shift and go to state 75
    QUACKIN         shift and go to state 76
    DESDE           shift and go to state 78
    ID              shift and go to state 77
    MIENTRAS        shift and go to state 80

    estatuto                       shift and go to state 61
    estatutos_rec                  shift and go to state 85
    empty                          shift and go to state 62
    asignacion                     shift and go to state 63
    condicion                      shift and go to state 64
    func_void                      shift and go to state 65
    retorno                        shift and go to state 66
    escribe                        shift and go to state 67
    lee                            shift and go to state 68
    desde                          shift and go to state 69
    mientras_estatuto              shift and go to state 70
    id                             shift and go to state 71
    func_call_id                   shift and go to state 73
    mientras                       shift and go to state 79

state 62

    (30) estatutos_rec -> empty .

    RCURLYB         reduce using rule 30 (estatutos_rec -> empty .)


state 63

    (31) estatuto -> asignacion .

    SI              reduce using rule 31 (estatuto -> asignacion .)
    RETORNO         reduce using rule 31 (estatuto -> asignacion .)
    QUACKOUT        reduce using rule 31 (estatuto -> asignacion .)
    QUACKIN         reduce using rule 31 (estatuto -> asignacion .)
    DESDE           reduce using rule 31 (estatuto -> asignacion .)
    ID              reduce using rule 31 (estatuto -> asignacion .)
    MIENTRAS        reduce using rule 31 (estatuto -> asignacion .)
    RCURLYB         reduce using rule 31 (estatuto -> asignacion .)


state 64

    (32) estatuto -> condicion .

    SI              reduce using rule 32 (estatuto -> condicion .)
    RETORNO         reduce using rule 32 (estatuto -> condicion .)
    QUACKOUT        reduce using rule 32 (estatuto -> condicion .)
    QUACKIN         reduce using rule 32 (estatuto -> condicion .)
    DESDE           reduce using rule 32 (estatuto -> condicion .)
    ID              reduce using rule 32 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 32 (estatuto -> condicion .)
    RCURLYB         reduce using rule 32 (estatuto -> condicion .)


state 65

    (33) estatuto -> func_void .
